<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center|right"
                    android:text="@string/setting_sound"
                    android:fontFamily="@font/maplestory_light"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="35"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/ChooseCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:foregroundTint="@color/colorAccent"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:foreground="@android:drawable/editbox_dropdown_dark_frame"
                android:foregroundTint="#00000000"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="15dp"
                    android:fadingEdge="horizontal"
                    app:srcCompat="@drawable/roulette" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maplestory_light"
                    android:gravity="center_horizontal"
                    android:text="@string/select_menu"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="35"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/PriceCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="15dp"
                    app:srcCompat="@drawable/first" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maplestory_light"
                    android:gravity="center_horizontal"
                    android:text="@string/internet_menu"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/DataCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="15dp"
                    app:srcCompat="@drawable/circus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maplestory_light"
                    android:gravity="center_horizontal"
                    android:text="@string/data_menu"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>